--- a/css/custom.css
+++ b/css/custom.css
@@ -24,7 +24,7 @@ body {
 }
 
 .text-vertical-center h1 {
-    margin: 0;
+    margin: 0 0 25px 0;
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
